--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.9.0
   uuid: ^4.5.1
+  telephony: ^0.2.0
+  tflite_flutter: ^0.10.4
+  flutter_local_notifications: ^17.0.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +32,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/fraud_model.tflite
+    - assets/vocab.json
