--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
-# General
+# Top-level ignores
+.DS_Store
+Thumbs.db
+*.log
+
+# Environment/secrets
+.env
+
+# VS Code
+.vscode/
+
+# Backend (Node.js)
+backend/node_modules/
+backend/.env
+backend/logs/
+backend/tmp/
+backend/coverage/
+backend/.DS_Store
+
+# Flutter mobile
+mobile/build/
+mobile/.dart_tool/
+mobile/.packages
+mobile/.flutter-plugins
+mobile/.flutter-plugins-dependencies
+mobile/.metadata
+mobile/.idea/
+mobile/.gradle/
+mobile/android/.gradle/
+mobile/android/build/
+mobile/ios/Pods/
+mobile/ios/.generated/
+mobile/ios/Flutter/Flutter.podspec
+
+# Generated reports/outputs under mobile
+mobile/**/intermediates/
+mobile/**/outputs/
+mobile/**/generated/
+mobile/**/tmp/
+mobile/**/_composite.stamp# General
 .DS_Store
 .env
 
