--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   permission_handler: ^12.0.1
   flutter_svg: ^2.2.3
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
